--- a/src/app/componenti/homepage/carrello/carrello.component.html
+++ b/src/app/componenti/homepage/carrello/carrello.component.html
@@ -1,26 +1,32 @@
 
-    <a><button id="bckHP"> ⬅️ Torna alla Home Page</button></a>
+    <button id="bckHP" routerLink=""> ⬅️ Torna alla Home Page</button>
     <div class="firstTitle">
         <h1 id="title">IL TUO CARRELLO</h1>
     </div>
     <h2 id="secondTitle">Qui potrai trovare tutti gli articoli da te selezionati</h2>
 
-    <div id="cardsCase">
+    <div id="cardsCase" [style.display]= "displayNone">
         @for (carta of carte; track $index) {
-            <div class="contenitore">
-                <img src="{{carta.img}}" alt="foto carta" class="fotoCarta">
-                <h1 class="cardText">{{carta.nome}}</h1>
-                <select class="cardQuantity">
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                    <option value="6">6</option>
-                </select>
-                <button class="btnCards" onclick="deleteCard()">ELIMINA</button>
+            <div id="contCarta">
+                <div class="contenitore">
+                    <img src="{{carta.img}}" alt="foto carta" class="fotoCarta">
+                    <h1 class="cardText">{{carta.nome}}</h1>
+                    <select class="cardQuantity">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                    </select>
+                </div>
             </div>
         }
+        <div id="finalOptions" class="contenitore">
+            <button id="deleteAll" class="togliTutto" (click)="deleteCards()">ELIMINA TUTTO</button>
+            <button id="buyAll" class="togliTutto" (click)="deleteCards()">COMPRA</button>
+        </div>
+    
         
         </div>
 
