--- a/src/app/componenti/homepage/homepage.component.css
+++ b/src/app/componenti/homepage/homepage.component.css
@@ -1,11 +1,3 @@
-body{
-    background-image: url(http://static.zerochan.net/Yu-Gi-Oh!.ZEXAL.full.2067483.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin: 0px;
-    border: 0px;
-    color: black;
-}
 .link{
     height: 50px;
     width: 50px;
@@ -43,13 +35,13 @@ div.recapito{
     text-align: center;
     font-size: 100%;
     zoom: 100%;
+    color: black;
 }
 button#referalLink{
     margin-top: 3%;
     background-color: rgb(12, 115, 240);
     border-radius: 5px;
     font-weight: bold;
-    
 }
 div.testata {
     margin-left: 20%;
@@ -66,6 +58,7 @@ h1.testata{
     margin-top: 40px;
     border: 2px solid black;
     border-radius: 5px;
+    color: black;
 }
 
 h2.testata{
@@ -73,6 +66,7 @@ h2.testata{
     background-color: darkslateblue;
     border: 2px solid black;
     border-radius: 5px 10px;
+    color: black;
 }  
 .fotoCarta{
     height: 500px;
@@ -114,6 +108,10 @@ button:hover{
 }
 button:active{
     background-color: rgb(32, 24, 83);
-  box-shadow: 0 1px #666;
-  transform: translateY(1px);
+    box-shadow: 0 1px #666;
+    transform: translateY(1px);
+}
+img.link:hover{
+    box-shadow: 1px 1px 1px 1px;
+    cursor: pointer;   
 }
