--- a/src/app/componenti/homepage/homepage.component.css
+++ b/src/app/componenti/homepage/homepage.component.css
@@ -51,6 +51,7 @@ div.testata {
 div.firstTitle{
     background-color: darkslateblue;
 }
+
 h1.testata{ 
     text-align: center; 
     zoom: 100%;
@@ -60,20 +61,14 @@ h1.testata{
     border-radius: 5px;
     color: black;
 }
-
-h2.testata{
-    text-align: center;
-    background-color: darkslateblue;
-    border: 2px solid black;
-    border-radius: 5px 10px;
+.img-carta{
+    height: 250px;
+    padding: 1%;
+}
+.color{
     color: black;
-}  
-.fotoCarta{
-    height: 500px;
-    margin: auto;
-    width: 80%; 
-    object-fit: contain;
-    margin-bottom: 5%;
+    font-weight: bold;
+    font-size: larger;
 }
 .prezzi{
     color: black;
@@ -82,28 +77,23 @@ h2.testata{
     font-size: larger;
     background-color: rgb(50, 40, 110);
     border-radius: 3px;
-    margin-left: 10%;
-    margin-right: 10%;
     border: 1px solid black;
-    margin-bottom: 2%;
+    margin: auto;
 }
-.articolo {
-    border: 2px solid black;
-    height: 400px;
-    width: 200px; 
-    display: flex;
-    flex-direction: column;
-    min-width: 200px;
-    margin-left: 5%;
-    margin-bottom: 5%;
-    border-radius: 4%;
+ .articolo {
+    background-color: darkslateblue;
+    margin-left: 1%;
+    margin-right: 1%;
+    margin-top: 2%;
 }
 div.articolo:hover{
     box-shadow: 3px 3px 3px 3px;
-    background-color: darkslateblue;
+    background-color: blueviolet;
+    transform: translateY(-10px);
 }
 button:hover{
     box-shadow: 1px 1px 1px 1px;
+    background-color: rgb(55, 12, 95);
     
 }
 button:active{
@@ -111,7 +101,4 @@ button:active{
     box-shadow: 0 1px #666;
     transform: translateY(1px);
 }
-img.link:hover{
-    box-shadow: 1px 1px 1px 1px;
-    cursor: pointer;   
-}
+
