--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 body{
-    background-image: url(http://static.zerochan.net/Yu-Gi-Oh!.ZEXAL.full.2067483.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-image: url(assets/sfondo.jpg);
+    background-repeat: repeat-y;
+    background-size: contain;
     margin: 0px;
     border: 0px;
     color: black;
