--- a/src/app/componenti/homepage/carrello/carrello.component.html
+++ b/src/app/componenti/homepage/carrello/carrello.component.html
@@ -1,5 +1,10 @@
 
-    <button id="bckHP" routerLink=""> ⬅️ Torna alla Home Page</button>
+    <button id="bckHP" routerLink=""> 
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left-square-fill" viewBox="0 0 16 16">
+            <path d="M16 14a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2zm-4.5-6.5H5.707l2.147-2.146a.5.5 0 1 0-.708-.708l-3 3a.5.5 0 0 0 0 .708l3 3a.5.5 0 0 0 .708-.708L5.707 8.5H11.5a.5.5 0 0 0 0-1"/>
+        </svg>
+      Torna alla Home Page
+    </button>
     <div class="firstTitle">
         <h1 id="title">IL TUO CARRELLO</h1>
     </div>
@@ -7,24 +12,27 @@
 
     <div id="cardsCase" >
         <div [style.display]= "displayNone">
-        @for (carta of carte; track $index) {
-            <div id="contCarta">
-                <div class="contenitore">
-                    <img src="{{carta.img}}" alt="foto carta" class="fotoCarta">
-                    <h1 class="cardText">{{carta.nome}}</h1>
-                    <select class="cardQuantity">
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
-                    </select>
+            @for (carta of cards; track $index) {
+                <div [style.display]= "displayNoneCard">
+                    <div id="contCarta">
+                        <div class="contenitore">
+                            <img src="{{carta.img}}" alt="foto carta" class="fotoCarta">
+                            <h1 class="cardText">{{carta.nome}}</h1>
+                            <select class="cardQuantity">
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                                <option value="6">6</option>
+                            </select>
+                            <button class="btn-primary btn-singola" (click)="eliminaCard($index)">ELIMINA</button>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        }
+            }
     </div>
-        <div id="finalOptions" class="contenitore">
+        <div id="finalOptions" class="contenitore" [style.display]="displayNone">
             <button id="deleteAll" class="togliTutto" (click)="deleteCards()">ELIMINA TUTTO</button>
             <button id="buyAll" class="togliTutto" (click)="deleteCards()">COMPRA</button>
         </div>
