--- a/src/app/componenti/homepage/homepage.component.html
+++ b/src/app/componenti/homepage/homepage.component.html
@@ -1,7 +1,7 @@
 
     <nav>
+      <!-- float link recapiti -->
       <img routerLink="carrello" class="link" id="imgCarrello" [src]="imgCarrello"  alt="carrello">
-
         @if (switchEcommerce === 'visibili') {
           <a href="https://www.cardmarket.com/Users/Bagherinho" id="cardmarket" target="_blank">
             <img class="link" src="../../../assets/immaginiLink/cardmarket.jpg" border ="0" alt="Cardmarket - Bagherinho" />
@@ -15,8 +15,8 @@
 
         <div class="recapito">
             <h1 class="recapito">
-                CONTATTAMI AI LINK: <br>
-                <button (click)="refLinkFunction()" id="referalLink">Click Here!</button>
+                I NOSTRI LINK: <br>
+                <button (click)="refLinkFunction()" id="referalLink">Clicca qui!</button>
             </h1>
         </div>
       </nav>
@@ -33,21 +33,30 @@
     <div class="container text-center">
         <div class="row align-items-start align-content-center">
           
+          <!-- ciclo per inserire cards -->
           @for (carta of carte; track $index) {
-           <div class="articolo card mb-3" style="max-width: 540px;">
+           <div class="articolo card mb-3" [style.max-height]="maxAltezzaCard ">
             <div class="row g-0">
               <div class="col-md-4">
                 <img src="{{carta.img}}" class="img-carta img-fluid rounded-start" alt="...">
               </div>
               <div class="col-md-8">
                 <div class="card-body" style="height: 100%;">
-                  <h5 class="card-title color">{{carta.nome}}</h5>
-                      <p class="card-text color">{{carta.prezzo}} €</p>
-                      <p class="card-text" >
-                        <small class="text-body-secondary">
-                          <button class="prezzi" (click)="aggiungiAlCarrello()">Aggiungi al carrello</button>
-                        </small>
-                      </p>
+                  <h5 class="card-title colore">{{carta.nome}}</h5>
+                  <!-- mostra o nascondi descrizione -->
+                    @if (dimensioneSchermo > cambioDimensione) {
+                      <div class="descrizione">DESCRIZIONE
+                        Il Yu-Gi-Oh! Trading Card Game è un gioco di carte collezionabili giapponese sviluppato e pubblicato da Konami. È basato sul gioco immaginario Duel Monsters creato dall'artista manga Kazuki Takahashi, che appare in alcune parti del franchise manga Yu-Gi-Oh!
+                        (Il gioco di carte collezionabili è stato lanciato da Konami nel 1999 in Giappone e nel marzo 2002 in Nord America)</div>
+                    }
+                      <div class="">
+                        <p class="card-text colore">{{carta.prezzo}} €</p>
+                        <p class="card-text" >
+                          <small class="text-body-secondary">
+                            <button class="btn-carrello" (click)="aggiungiAlCarrello()">Aggiungi al carrello</button>
+                          </small>
+                        </p>
+                    </div>
                 </div>
               </div>
             </div>
